--- a/litestream.yml
+++ b/litestream.yml
@@ -3,12 +3,8 @@ exec: node /app/server/server.js
 dbs:
   - path: /app/data/kuma.db
     replicas:
-      - type: s3
-        access-key-id: "${LITESTREAM_ACCESS_KEY_ID}"
-        secret-access-key: "${LITESTREAM_SECRET_ACCESS_KEY}"
-        bucket: "${LITESTREAM_BUCKET}"
-        path: "${LITESTREAM_PATH}"
-        endpoint: "${LITESTREAM_URL}"
-        region: "${LITESTREAM_REGION}"
-        retention: 72h
-        snapshot-interval: 12h
+      - type:     sftp
+        host:     "${LITESTREAM_HOST}"
+        user:     "${LITESTREAM_USER}"
+        key-path: "/tmp/.ssh/id_rsa"
+        path:     "${LITESTREAM_PATH}"
